--- a/indexInglese.html
+++ b/indexInglese.html
@@ -77,8 +77,8 @@
                     <h2 class="typed-text-output d-inline"></h2>
                     <div class="typed-text d-none">Student, passionate about fashion and with many dreams</div>
                     <div class="d-flex align-items-center pt-5">
-                        <a href="file:///C:/Users/loren/Downloads/CV%20Lorenzo.pdf" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
-						 <a href="file:///C:/Users/loren/Desktop/sitoCV/proman-1.0.0/index.html?" class="btn btn-primary py-3 px-4 me-5">Italian Website</a>
+                        <a href="CVLorenzo.pdf" class="btn btn-primary py-3 px-4 me-5">Download CV</a>
+						 <a href="index.html" class="btn btn-primary py-3 px-4 me-5">Italian Website</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
